# validation-py

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  Jenkinsfile  LICENSE  README  README.md  pyproject.toml  requirements.txt  setup.py  unit.py  vectors.json
test/: hl_spec.json  ll_spec.json
validation/: __init__.py
validation/constants/: rules.py  types.py
validation/exceptions/: __init__.py  array_validation_error.py  base_error.py  error.py  nullable_error.py  object_validation_error.py  rule_error.py  spec_error.py  type_error.py  unknown_rule.py  validation_error.py  wrong_type.py
validation/parser/: __init__.py  spec_parser.py
validation/rules/: __init__.py  alpha.py  alphadash.py  alphanum.py  between.py  betweenlength.py  decimal.py  equals.py  equalsto.py  fileformat.py  filetype.py  hex.py  isin.py  len.py  max.py  maxlength.py  maxsize.py  min.py  minlength.py  minsize.py  mustbetrue.py  nullable.py  nullableif.py  operationalfield.py  phonetype.py  regex.py  required.py  rule.py  rule_factory.py  ruleset.py  strict.py
validation/types/: __init__.py  array.py  base58.py  base64.py  base64file.py  boolean.py  composite.py  email.py  float.py  integer.py  iso8601date.py  jwt.py  object.py  phone.py  sequence.py  string.py  type.py  type_factory.py  url.py  uuid.py
validation/utils/: __init__.py  base64file_utils.py
validation/validator/: array_validator.py  array_validator_summary.py  object_validator.py  object_validator_summary.py  primitive_validator.py  primitive_validator_summary.py  validator.py  validator_error.py  validator_factory.py  validator_summary.py
