[tool.poetry]
name = "validation-python"
version = "2.0.0"
description = ""
authors = ["michelle.laurenti@chainside.net",
           "mattias.mignone@moveax.it"]

[tool.poetry.dependencies]
phonenumbers = "^8.10"
python-dateutil = "^2.7.3"

[tool.poetry.dev-dependencies]
coverage = {version = "^4.5",python = "^3.7"}
