[build-system]
requires = ["poetry>=0.12"]

[tool.poetry]
authors = ["Mattias E. Mignone <mattias.mignone@moveax.it>",
           "Michelle Laurenti <michelle.laurenti@chainside.net>"]
description = "Validation library"
licence = "MIT"
name = "moveax-validation"
packages = [{include = "validation"}]
readme = "README.md"
repository = "https://github.com/moveaxlab/validation-py"
version = "2.0.0"

[tool.poetry.dependencies]
phonenumbers = "^8.10"
python = "^3.5"
python-dateutil = "^2.7.3"

[tool.poetry.dev-dependencies]
coverage = {version = "^4.5",python = "^3.5"}
